# OCCT

step_test/: CMakeLists.txt  StepFileReader_OCCT_ref.cpp
step_test/src/: main.cpp
